# peloton-dynamics-abm

./: .gitignore  BATCH_LEARNING.md  CLAUDE.md  Dockerfile  LEARNING_VALIDATION.md  README.md  analyze_final_distributions.py  batch_learning.py  context.md  learning.csv  main.py  make_gif.py  population.json  pyproject.toml  run_app.py  run_batch_learning.sh  w_max10_analysis.py
data/: gsa_morris.csv  gsa_sobol.csv  learning.csv  population.json
data-SA/: 24214965-6896023-morris-parallel  24214967-6896023-sobol-parallel  24216220-4c3f619-morris-parallel  24216291-4c3f619-sobol-parallel  current-morris  current-sobol
genAI/: cyclist.py  explanation.md  model.py  run_simulation.py
logs/: batch_24196207.err  batch_24196262.err  batch_24198849.err  batch_24198904.err  batch_24198924.err
scripts/: 01-v-and-v.sh  02-emergence-hunting.sh  03-sobol.sh  _gsa-array-eval.sh  _gsa-array-merge.sh  _gsa-array-watch.sh  _gsa-dump-array-body.sh  _gsa-dump-job-body.sh  _gsa-job-body.sh  analyze.py  analyze_strategies.py  batch_learning.py  collect_data_evolution.py  gsa_morris.py  gsa_sobol.py  gsa_sobol_from_dumps.py  gsa_sobol_heatmaps.py  job-cpu-rome-batch-learning.sh  job-cpu-rome-gsa-01-separate-morris-sobol.sh  job-cpu-rome-gsa-02-sobol-array.sh  job-cpu-rome-gsa-morris-array-dryrun.sh  job-cpu-rome-gsa-morris-array.sh  job-cpu-rome-gsa-morris-dryrun.sh  job-cpu-rome-gsa-morris-dump.sh  job-cpu-rome-gsa-morris.sh  job-cpu-rome-gsa-separate-jobs.sh  job-cpu-rome-gsa-sobol-array-dryrun.sh  job-cpu-rome-gsa-sobol-array.sh  job-cpu-rome-gsa-sobol-dryrun.sh  job-cpu-rome-gsa.sh  (+32 more)
(+294 files in other folders)
