[project]
name = "abm-project-src"
version = "0.1.0"
description = "Agent-based model of a competitive cycling peloton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mesa>=3.5.1",
    "solara",
    "matplotlib",
    "altair",
    "networkx",
    "numpy",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peloton"]

[tool.pytest.ini_options]
testpaths = ["tests"]
